# SolAster

./: .gitignore  404.html  MANIFEST  MANIFEST.in  README.md  README.rst  conda_env.yml  index.html  objects.inv  paper_figures.ipynb  requirements.txt  setup.cfg  setup.py  setup_template.py  sitemap.xml
SolAster/: __init__.py
SolAster/examples/: component_calculations.ipynb  full_pipeline.ipynb  rv_calculation.ipynb
SolAster/source/: rv_pipeline.py
SolAster/tools/: __init__.py  calculation_funcs.py  coord_funcs.py  lbc_funcs.py  plotting_funcs.py  rvs.py  settings.py  utilities.py
about/: index.html
calcs/coords/: index.html
calcs/mag/: index.html
calcs/region/: index.html
calcs/rv/: index.html
calcs/vel/: index.html
data/corr/: index.html
data/data/: index.html
examples/docs_full_pipeline/: index.html
examples/docs_rv_calcs/: index.html
examples/docs_solar_corrections/: index.html
examples/docs_sunpy_example/: index.html
install/: index.html
mkdocs/: mkdocs.yml
mkdocs/docs/: about.md  index.md  install.md  setup.md
mkdocs/site/: 404.html  index.html  objects.inv  sitemap.xml
package/calculation_funcs/: index.html
package/coord_funcs/: index.html
package/lbc_funcs/: index.html
package/pipeline/: index.html
package/plotting_funcs/: index.html
package/rvs/: index.html
package/settings/: index.html
sdo/coords/: index.html
sdo/corr/: index.html
sdo/data/: index.html
sdo_hmi_rvs/: __init__.py
sdo_hmi_rvs.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
search/: search_index.json
setup/: index.html
(+280 files in other folders)
