[metadata]
name = sdo_hmi_rvs
version = 0.0.3
author = Tamar Ervin
author_email = tamarervin@gmail.com
description = Python package to independently derive 'sun-as-a-star' radial velocity variations.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tamarervin/sdo_hmi_rvs
project_urls =
    Bug Tracker = https://github.com/tamarervin/sdo_hmi_rvs/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

;[options]
;package_dir =
;    = sdo_hmi_rvs
;packages = find:
;python_requires = >=3.6
;
;[options.packages.find]
;where = sdo_hmi_rvs